--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Hyper Text Maerkup Language</title>
+        <title>Hyper Text Markup Language</title>
     </head>
     <body>
         <h1>E-Commerce</h1>
